2011-10-12  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC4319_HDSL2_SHDSL_LINE_MIB.pm:
	new discovery module for HDSL2-SHDSL-LINE-MIB

	* xmlconfig/generic/rfc2863.if-mib.xml: added templates for
	ifSpeed and ifHighSpeed
	

2011-10-03  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoFirewall.pm: interface filter
	that removes TunnelN interfaces.

2011-09-04  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* NEWS: Torrus release 2.01

2011-06-26  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* xmlconfig/snmp-defs.xml: RRA for SNMP reachability is separately
	defined. New discovery parameter: snmp-reachability-rra.

2011-06-07  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Collector.pm (beforeRun): Collector
	initialization exclusive lock is enabled by
	$Torrus::Collector::exclusiveStartupLock in torrus-siteconfig.pl

	* perllib/Torrus/Renderer/RPC.pm: new RPC method: SEARCH_NODEID

2011-06-03  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Renderer/RPC.pm: New RPC method: AGGREGATE_DS

2011-06-02  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Scheduler.pm, perllib/Torrus/Collector.pm: repeat
	immediately 3 collector cycles at start

2011-06-01  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Collector/RRDStorage.pm (updateRRD): suppress
	inserting NaN when no data is available for the whole RRD file

	* xmlconfig/snmp-defs.xml: default rrd-create-heartbeat changed
	from 500 to 720

2011-05-30  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Renderer/RRDtool.pm: "imgformat" is now a
	configurable view parameter

	* xmlconfig/defaults.xml: new view: "embedded" for external GUI
	systems

2011-05-26  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Collector.pm (beforeRun): Collector