@@ -206,6 +206,10 @@ $Torrus::DevDiscover::timeFormat = '%d-%m-%Y %H:%M';
          'name'   => 'interface-bandwidth-usage',
          'source' => 'generic/rfc2863.if-mib.xml'
          },
+     'RFC2863_IF_MIB::interface-bandwidth-usage-ifspeed' => {
+         'name'   => 'interface-bandwidth-usage-ifspeed',
+         'source' => 'generic/rfc2863.if-mib.xml'
+         },
 
      #### RDBMS MIB
      'RFC1697_RDBMS::rdbms-dbtable' => {
