@@ -464,6 +464,38 @@
     </leaf>
   </template>
 
+  
+  <!-- Bandwidth usage in percentage of ifSpeed or ifHighSpeed  -->
+  <template name="interface-bandwidth-usage-ifspeed">
+    <leaf name="Bandwidth_Usage">
+      <param name="comment" value="Bandwidth usage graphs" />
+      <param name="vertical-label"   value="percent" />
+      <param name="graph-lower-limit" value="0" />
+      <param name="graph-upper-limit" value="100" />
+      <param name="upper-limit"      value="100" />
+      <param name="rrd-hwpredict"    value="disabled" />
+      <param name="precedence"       value="998" />
+      <param name="nodeid"            value="%nodeid-interface%//bw"/>
+      <param name="ds-type"          value="rrd-multigraph" />
+      <param name="ds-names"         value="in,out" />
+
+      <param name="ds-expr-in"
+         value="{Bytes_In},8,*,{Speed},/" />
+      <param name="graph-legend-in"
+        value="Input use of available bandwidth" />
+      <param name="line-style-in"    value="##BpsIn" />
+      <param name="line-color-in"    value="##BpsIn" />
+      <param name="line-order-in"    value="1" />
+
+      <param name="ds-expr-out"
+         value="{Bytes_Out},8,*,{Speed},/" />
+      <param name="graph-legend-out"
+        value="Output use of available bandwidth" />
+      <param name="line-style-out"   value="##BpsOut" />
+      <param name="line-color-out"   value="##BpsOut" />
+      <param name="line-order-out"   value="2" />
+    </leaf>
+  </template>
 
   
   <!-- ********************************************************************
